[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/styles/panel_big_1.tres" type="StyleBox" id=1]
[ext_resource path="res://resources/styles/theme_no_scroll.tres" type="Theme" id=2]
[ext_resource path="res://scenes/StorageControl.gd" type="Script" id=3]

[node name="StorageControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -42.0
margin_right = -3.0
margin_bottom = -4.0
custom_styles/panel = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 3.0
margin_right = -4.0
margin_bottom = -3.0
theme = ExtResource( 2 )
scroll_vertical_enabled = false

[node name="StorageList" type="HBoxContainer" parent="Panel/ScrollContainer"]
unique_name_in_owner = true

[connection signal="gui_input" from="." to="." method="_on_StorageControl_gui_input"]
[connection signal="visibility_changed" from="." to="." method="_on_StorageControl_visibility_changed"]
